# maskset-examples

./: .gitmodules  Dockerfile  README.md
inventree/: README.md
local-llm/: README.md
mermaid/: README.md  mermaid-testing-process.mermaid
model-predictive-controller/: README.md
ngscopeclient/docker/: Dockerfile  README.md
openems-ubuntu-install/ubuntu-22.04/: Dockerfile
openems-ubuntu-install/ubuntu-24.04/: Dockerfile
project/source/: renode-example.c
renode-bootloader/project/: CMakeLists.txt  arm-none-eabi.cmake  renode-config-application.resc
renode-bootloader/project/application/: CMakeLists.txt
renode-bootloader/project/application/src/: main.c  shell_commands.c
renode-bootloader/project/bootloader/: CMakeLists.txt  platforms  renode-config.resc
renode-bootloader/project/bootloader/src/: main.c  minimal_nrf52_uart.c  shell_commands.c
renode-bootloader/project/common/linker/: memory-sections.ld
renode-bootloader/project/common/src/: mcuboot_port.c  minimal_nrf52_flash.c  shell_commands.c
renode-docker/: Dockerfile  README.md
renode-docker/project/: Makefile  Makefile_renode_example.mk  renode-config.resc  rules.mk
renode-docker/project/source/: renode-example.c
renode-zephyr-bootloader/hello_world/: README  prj.conf  renode-config-application.resc  west.yml
renode-zephyr-bootloader/hello_world/renode-platforms/cpus/: nrf52840.repl
scemdraw/: README.md  schemdraw.ipynb
tarriff-math/: oshpark-pcbway-pricing.ipynb
thermistors/: example-thermistor.kicad_sch  ntcg103jx103dt1.csv  thermistor-analysis.ipynb  thermistor_lut_example.cpp
timing-diagrams/: interrupt.sr  interrupt_startup.sr  interrupt_startup.vcd  pipelined_adc.ipynb  polling_power_up.sr  vlt_dump.vcd
war-card-game-monte-carlo/: CMakeLists.txt  make_md.py  plots.ipynb
war-card-game-monte-carlo/include/war-simulator/: war-simulator.hpp
war-card-game-monte-carlo/results/: out_100k_wars_all_all.md  out_1M_wars_012.md  out_1M_wars_012357.md
war-card-game-monte-carlo/src/: main.cpp  war-simulator.cpp
war-card-game-monte-carlo/tests/src/: test_main.cpp
zephyr/zephyr-project-setup/: README.md  renode-config-application.resc
zephyr/zephyr-project-setup/app/: CMakeLists.txt  VERSION  prj.conf  sysbuild.conf  west.yml
zephyr/zephyr-project-setup/app/boards/: nrf52840dk_nrf52840.overlay  nrf52dk_nrf52805.overlay  nrf52dk_nrf52832.overlay
zephyr/zephyr-project-setup/app/src/: main.c
zephyr/zephyr-project-setup/app/sysbuild/: mcuboot.conf
zephyr/zeyphr-project-setup/: README.md  renode-config-application.resc
zephyr/zeyphr-project-setup/.west/: config
zephyr/zeyphr-project-setup/app/: CMakeLists.txt  VERSION  prj.conf  sysbuild.conf  west.yml
zephyr/zeyphr-project-setup/app/boards/: nrf52840dk_nrf52840.overlay  nrf52dk_nrf52805.overlay
zephyr/zeyphr-project-setup/app/src/: main.c
zephyr/zeyphr-project-setup/app/sysbuild/: mcuboot.conf  mcuboot.conf.serial
